# datalens-mcp

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  README_ru.md  datalens-mcp.spec
.github/workflows/: ci.yml  release.yml
man/: datalens-mcp.1
openapi/: datalens-rpc-methods.json
src/: main.rs
tests/: method_schema_integration.rs
wix/: main.wxs
